String practice problems

--- a/build.gradle
+++ b/build.gradle
@@ -27,3 +27,5 @@ dependencies {
 test {
     useTestNG()
 }
+sourceCompatibility = JavaVersion.VERSION_17
+targetCompatibility = JavaVersion.VERSION_17
